--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,10 @@
 body{
-color:red;
+    color: #5c8fff;
+    font-family: cursive, Arial, sans-serif;
+}
+
+form{
+    width: 50%;
+    margin: auto;
+    text-align: center;
 }
